--- a/templates/page1.html
+++ b/templates/page1.html
@@ -583,18 +583,24 @@
   </div>
             <!-- Босс -->
   <div class="page" id="top" style="display:none;">
-<div class="boss-container">
+
+    <div id="timer" class="timer">Time Left: 10s</div>
+
     <div id="health-bar" class="health-bar">
         <div id="health-bar-inner" class="health-bar-inner"></div>
     </div>
+
     <img id="boss" class="boss" src="/static/images/boss1.png" alt="Boss" />
-    <div id="timer" class="timer">Time Left: 20s</div>
-    <div id="game-over" class="game-over"></div>
-    <button id="start-button">Start Game</button>
+    <div id="level-text" class="level-text">Уровень 1</div>
+
+    <button id="start-button">Нажми чтобы начать</button>
+    <button id="next-level-button">Нажми чтобы играть</button>
+
+    <div id="final-message" class="final-message">Вы победили всех боссов на данный момент</div>
+
+
+
 </div>
-  </div>
-
-
 </div>
 
 <script src="{{ url_for('static', filename='script_new.js') }}"></script>
