--- a/static/style.css
+++ b/static/style.css
@@ -50,7 +50,6 @@ body {
     border-radius: 5px; /* Сглаживание углов */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     color: orange; /* Белый текст */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Легкая тень */
     font-family: 'Pusia-bold', sans-serif; /* Шрифт */
     font-size: 20px; /* Размер шрифта */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
@@ -66,7 +65,6 @@ body {
     display: flex;
     flex-direction: column-reverse; /* Элементы будут располагаться снизу вверх */
     color: orange; /* Белый текст */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Легкая тень */
     font-family: 'Pusia-bold', sans-serif; /* Шрифт */
     font-size: 20px; /* Размер шрифта */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
@@ -350,7 +348,6 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
   width: 320px;
   height: 80px;
   border: 2px solid #d1a34a; /* Обводка контейнера */
-
   /* Центрирование с отступом */
   position: absolute; /* Используем absolute для позиционирования */
   top: 300px; /* Отступ сверху */
@@ -687,7 +684,7 @@ h2 {
 }
 
 .reward-image img {
-    max-width: 100px;
+    max-width: 200px;
     height: auto;
     margin: 10px 0;
 }
@@ -943,7 +940,7 @@ body.heroes-page {
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
       width: 400px;
-      margin: 220px auto 0 auto;
+      margin: 30px auto 0 auto;
     }
 
     .character {
@@ -983,8 +980,8 @@ body.heroes-page {
     }
 
     .preview {
-      position: absolute;
-      top: 160px;
+      position: relative;
+      top: 30px;
       left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
@@ -1752,14 +1749,23 @@ body.up_page {
 
 
 
+/* Сброс отступов для html и body */
+html, body {
+    margin: 0;  /* Убираем внешние отступы */
+    padding: 0; /* Убираем внутренние отступы */
+    height: 100%; /* Устанавливаем высоту 100% */
+    width: 100%; /* Устанавливаем ширину 100% */
+    overflow-x: hidden; /* Убираем горизонтальный скролл */
+}
+
 /* Босс */
 .boss {
-    position: absolute;
-    top: 40%;
-    left: 30%;
-    transform: translate(-50%, -50%);
-    width: 250px;
-    height: 250px;
+    position: absolute; /* Позиционирование относительно ближайшего предка с position: relative (или body) */
+    top: 30%; /* Позиция по вертикали в центре */
+    left: 20%; /* Позиция по горизонтали в центре */
+    transform: translate(-50%, -50%); /* Сдвиг на 50% ширины и высоты элемента */
+    width: 350px;
+    height: 350px;
     cursor: pointer;
     animation: growShrinkAnimation 1.5s infinite;
     pointer-events: none;
@@ -1795,7 +1801,8 @@ body.up_page {
     transition: width 0.2s, background-color 0.3s;
 }
 
- .timer {
+/* Таймер */
+.timer {
     position: absolute;
     top: 3%;
     left: 50%;
@@ -1814,6 +1821,7 @@ body.up_page {
     justify-content: center; /* Выравнивание по центру по горизонтали */
 }
 
+/* Уровень */
 .level-text {
     position: absolute;
     bottom: 20%;
@@ -1826,6 +1834,7 @@ body.up_page {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
 }
 
+/* Финальное сообщение */
 .final-message {
     position: absolute;
     top: 50%;
@@ -1837,6 +1846,7 @@ body.up_page {
     display: none;
 }
 
+/* Кнопка следующего уровня */
 #next-level-button {
     position: absolute;
     bottom: 10%;
@@ -1859,6 +1869,7 @@ body.up_page {
     box-shadow: 0 6px 20px rgba(255, 255, 255, 0.3); /* Белая тень */
 }
 
+/* Анимация урона для босса */
 @keyframes bossDamage {
     0% { transform: translate(0, 0); filter: brightness(1); }
     30% { transform: translate(-2px, 2px); filter: brightness(0.8); }
@@ -1870,6 +1881,13 @@ body.up_page {
     animation: bossDamage 0.15s ease-in-out;
 }
 
-
-
-
+/* Фон для top */
+#top {
+    width: 100%;
+    height: 100vh; /* Высота на весь экран */
+    background-size: cover;
+    background-position: center;
+    transition: background 0.3s ease; /* Плавная смена фона */
+    margin: 0; /* Убираем внешние отступы */
+    padding: 0; /* Убираем внутренние отступы */
+}
