--- a/templates/page1.html
+++ b/templates/page1.html
@@ -162,9 +162,6 @@
     <!-- Окно для открытия коробки -->
     <div class="container_box_11" style="display: none;">
         <button class="close-button_box1">&times;</button>
-        <div class="top-image">
-            <img src="/static/images/croco.png" alt="Символ" />
-        </div>
         <div class="character_up_buy"></div>
         <h1 class="title">ВЫ ВЫБИЛИ ГЕРОЯ:</h1>
         <div class="reward-image">
@@ -312,8 +309,8 @@
     <img src="/static/images/witch.png" alt="Character 8">
     <p>Character 8</p>
   </div>
-  <div class="character locked" data-id="9" data-name="Character 9" data-img="/static/images/pumpkin.png" data-description="Water is calm and adaptable, flowing through challenges.">
-    <img src="/static/images/pumpkin.png" alt="Character 9">
+  <div class="character locked" data-id="9" data-name="Character 9" data-img="/static/images/angel.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/angel.png" alt="Character 9">
     <p>Character 9</p>
   </div>
       <div class="character locked" data-id="10" data-name="Character 10" data-img="/static/images/ananas.png" data-description="Water is calm and adaptable, flowing through challenges.">
@@ -609,7 +606,6 @@
 <script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
 <script src="{{ url_for('static', filename='script_autoclicker.js') }}"></script>
-<script src="{{ url_for('static', filename='script_box.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='boss.js') }}"></script>
 
