--- a/templates/page1.html
+++ b/templates/page1.html
@@ -10,34 +10,34 @@
 <body>
 
 <!-- Навигация -->
-<div class="navigation" id="menu">
+    <div class="navigation" id="menu">
   <a href="#" class="nav-button active" data-page="play">
     <figure>
-      <img src="static/images/play.png" alt="Играть" width="15" height="15">
+      <img src="static/images/play2.png" alt="Играть" width="15" height="15">
       <figcaption>Играть</figcaption>
     </figure>
   </a>
   <a href="#" class="nav-button" data-page="friends">
     <figure>
-      <img src="static/images/friends_7.png" alt="Друзья" width="15" height="15">
+      <img src="static/images/friends_72.png" alt="Друзья" width="15" height="15">
       <figcaption>Друзья</figcaption>
     </figure>
   </a>
   <a href="#" class="nav-button" data-page="shop">
     <figure>
-      <img src="static/images/shop.png" alt="Магазин" width="15" height="15">
+      <img src="static/images/shop2.png" alt="Магазин" width="15" height="15">
       <figcaption>Магазин</figcaption>
     </figure>
   </a>
   <a href="#" class="nav-button" data-page="quests">
     <figure>
-      <img src="static/images/quests.png" alt="Квесты" width="15" height="15">
+      <img src="static/images/quests2.png" alt="Квесты" width="15" height="15">
       <figcaption>Квесты</figcaption>
     </figure>
   </a>
   <a href="#" class="nav-button" data-page="top">
     <figure>
-      <img src="static/images/boss.png" alt="Топ" width="15" height="15">
+      <img src="static/images/boss2.png" alt="Топ" width="15" height="15">
       <figcaption>Босс</figcaption>
     </figure>
   </a>
@@ -57,11 +57,9 @@
 
 <img id="clickButton"> <!-- Добавляем src и курсор pointer -->
 
-  <div class="icon-container">
-    <img src="/static/images/icon.png" alt="Иконка" width="75">
+  <div class="shadow">
+    <img src="/static/images/shadow.png" alt="Монеты" width="500" height="55">
   </div>
-
-  <p id="nick">Максим</p>
 
     <div class="progress-container">
       <div class="progress-bar" id="progressBar"></div>
